feat(island): support alert and progress notification styles